# arm_s2s

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  PUSH_TO_GITHUB.md  README.md  environment.yml
android/: build.gradle  gradlew  settings.gradle
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/armm/translation/: MainActivity.java  ModelManager.java  NativePipeline.java
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: strings.xml
android/native-lib/: CMakeLists.txt  native-lib.cpp
android/scripts/: prepare_models.sh
asr/: CMakeLists.txt  asr_wrapper.cpp  asr_wrapper.h
desktop/: CMakeLists.txt  main.cpp
docs/: ARCHITECTURE.md  BUILD.md  DESKTOP_BUILD.md  LLAMA_BUILD_FIX.md  OPTIMIZATION.md  Project_overview.md  REPORT.md
docs/chat-context/: 2026-02-15-032408-this-session-is-being-continued-from-a-previous-co.txt
host/: CMakeLists.txt  main.cpp
models/: .gitkeep
models/llm/: README.md  export_config.yaml
models/mt/onnx/: config.json  generation_config.json
mt/: CMakeLists.txt  llm_translator.cpp  llm_translator.h  marian_mt_wrapper.cpp  marian_mt_wrapper.h  mt_wrapper.cpp  mt_wrapper.h  translation_mode.h
pipeline/: CMakeLists.txt  lockfree_queue.h  performance_tracker.cpp  performance_tracker.h  phrase_detector.cpp  phrase_detector.h  pipeline.cpp  pipeline.h
scripts/: build_desktop.sh  build_host.sh  download_asr_model.sh  download_llm_model.sh  download_mt_model.sh  download_tts_model.sh  export_llm_model.sh  install_portaudio.sh  prepare_models_android.sh  quantize_models.py  setup_android_build.sh  setup_android_deps.sh  test_llm_modes.py
tests/: test_speculative.cpp
tts/: CMakeLists.txt  tts_wrapper.cpp  tts_wrapper.h
utils/: deer-arm-environment.yml
